--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@ esta utilizando -->
 
     <script>
 
+        // cada id se agrega al 
+        // objeto window 😲
+        
         window.show.addEventListener("click", () => {
             window.modal.showModal()
         })
