Comienzo curso CSS

--- a/index.html
+++ b/index.html
@@ -28,6 +28,29 @@ esta utilizando -->
     <meta name="og:image" content="/foto.jpg" />
     <meta name="og:image:alt" content="Fotografia de la pagina" />
 
+    <style>
+
+        
+        /* selector {
+            
+            // todo esto es una declaracion
+            propiedad: valor 
+
+        } */
+
+        h1
+        {
+            /* ultimos dos digitos para transparencia */
+            color: #00000055;
+        }
+
+        body
+        {
+            background: rgb(210, 181, 186);
+        }
+
+    </style>
+
 </head>
 
 <body>
