--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@ esta utilizando -->
         body
         {
             background: rgb(210, 181, 186);
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         }
 
     </style>
